# llm_engineering_udemy

./: hw1.py  pyproject.toml
week1/: day1.ipynb  day2 EXERCISE.ipynb  day5.ipynb  week1 EXERCISE.ipynb
