[project]
name = "llm-engineering-udemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "gensim>=4.3.3",
    "gradio>=5.14.0",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "langchain[docarray]>=0.3.17",
    "langchain-chroma>=0.2.1",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.3",
    "matplotlib>=3.10.0",
    "numpy>=1.26.4",
    "openai>=1.61.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "tiktoken>=0.8.0",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "transformers>=4.48.2",
    "datasets>=3.2.0",
    "sentencepiece>=0.2.0",
    "google-generativeai>=0.8.4",
    "anthropic>=0.45.2",
    "unstructured>=0.16.17",
    "chromadb>=0.6.3",
    "plotly>=6.0.0",
    "jupyter-dash>=0.4.2",
    "beautifulsoup4>=4.13.2",
    "pydub>=0.25.1",
    "modal>=0.73.12",
    "ollama>=0.4.7",
    "accelerate>=1.3.0",
    "bitsandbytes>=0.45.1",
    "psutil>=6.1.1",
    "setuptools>=75.8.0",
    "speedtest-cli>=2.1.3",
    "sentence-transformers>=3.4.1",
    "feedparser>=6.0.11",
    "simplejson>=3.19.3",
]
